QA_Ipreo/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <description>The values of Won/Lost pertain to New Business opportunities and the values of Cancelled/Renewed pertain to Renewal opportunities.</description>
        <inlineHelpText>Required when Opportunity Stage is Closed%.  When Status has not been populated, most fields on page are not validated by system.  Once Status is populated (with either Won/Lost for New Business or Renewed/Cancelled for Renewals), the validations occur.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <controllingField>Product_Transaction_Type__c</controllingField>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subgroup__c</fullName>
        <formula>Text( PricebookEntry.Product2.Subgroup__c )</formula>
        <label>Subgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <inlineHelpText>Applies to Opportunity Products sold as a subscription, only (N/A for projects).  Subscription End Date must be same (coterminous) for all Opportunity Products on the Opportunity.  Req at Won, Renewed if Subscription Start Date and Term populated.</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <inlineHelpText>Applies to Opportunity Products sold as a subscription, only (N/A for projects).  Required at Status &apos;Won&apos; or &apos;Renewed&apos; if Subscription End Date and Term are populated.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date_is_Current_Mo__c</fullName>
        <description>Used primarily for ExComm report filtering in Wave</description>
        <formula>Subscription_Start_Date__c  &gt;= DATE(YEAR(TODAY()),MONTH(TODAY()),05)</formula>
        <label>Subscription Start Date is &gt;= Current Mo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <description>Opportunity Term in Months</description>
        <inlineHelpText>Term of subscription, INCLUSIVE of any free period.  Leave blank for non-subscription products.  If entered, Subscription Start Date and Subscription End Date must also be entered.</inlineHelpText>
        <label>Term (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upfront_Expense_Fee__c</fullName>
        <inlineHelpText>Current year amount Ipreo will charge to customer upfront for expenses, typically expenses associated with software implementation or installation.</inlineHelpText>
        <label>Implementation/Upfront Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Win_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the Opportunity Product was for a former Ipreo customer of this product that went to a competitor and is now won back to Ipreo.  Cannot be checked for Lost or for Cancelled Opportunity Products.</inlineHelpText>
        <label>Win Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Comp_Date_is_Current_Month__c</fullName>
        <description>Used primarily for ExComm report filtering in Wave</description>
        <formula>Work_Order_Completion_Date__c &gt;= DATE(YEAR(TODAY()),MONTH(TODAY()),05)</formula>
        <label>Work Order Comp Date is &gt;= Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Completion_Date__c</fullName>
        <formula>Work_Order__r.Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Est_Completion_Date__c</fullName>
        <formula>Work_Order__r.Est_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Est Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Owner__c</fullName>
        <formula>Work_Order__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Work_Order__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Queue__c</fullName>
        <formula>Work_Order__r.Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Status__c</fullName>
        <formula>TEXT(Work_Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>Cannot_Add_Opp_Status_WO_Product_Rev_Ty</fullName>
        <active>true</active>
        <description>Can not save an opportunity product with a status without setting the opportunity product revenue type</description>
        <errorConditionFormula>(ISPICKVAL( Status__c , &apos;Won&apos;) || ISPICKVAL( Status__c , &apos;Renewed&apos;) || ISPICKVAL( Status__c , &apos;Lost&apos;) || ISPICKVAL( Status__c , &apos;Cancelled&apos;) ) &amp;&amp; ISBLANK(Text(  Product_Revenue_Type__c  ))</errorConditionFormula>
        <errorDisplayField>Product_Revenue_Type__c</errorDisplayField>
        <errorMessage>You can not save an opportunity product with a status without setting the opportunity product revenue type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Asset</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;) &amp;&amp;
((ISNEW() &amp;&amp; NOT(ISBLANK(Asset__c ))) || 
  ISCHANGED( Asset__c )) &amp;&amp;
 NOT(ISPICKVAL(Product_Transaction_Type__c , &apos;Add On&apos;))</errorConditionFormula>
        <errorDisplayField>Asset__c</errorDisplayField>
        <errorMessage>Only Operations users can change Assets, except on Add On opportunity products.  Please ask Sales Operations for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Prod_on_Closed_Opportunities</fullName>
        <active>true</active>
        <description>Prevent users from editing products on Closed Opportunities. Allow System Admin and Operations user to edit closed opportunities</description>
        <errorConditionFormula>Opportunity.IsClosed = TRUE &amp;&amp;  
($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Cannot edit product on closed opportunities.  Please ask Sales Operations to make any necessary changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Product_Region</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;) &amp;&amp;
ISCHANGED(   Product_Region__c   ) &amp;&amp;
NOT( ISNEW() ) &amp;&amp;
ISPICKVAL(Product_Transaction_Type__c, &apos;Renewal&apos;)</errorConditionFormula>
        <errorDisplayField>Product_Region__c</errorDisplayField>
        <errorMessage>Only Operations users can modify Product Region for renewal opportunity products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Product_Revenue_Type</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;) &amp;&amp;
ISCHANGED(  Product_Revenue_Type__c  ) &amp;&amp;
NOT( ISNEW() ) &amp;&amp;
ISPICKVAL(Product_Transaction_Type__c, &apos;Renewal&apos;)</errorConditionFormula>
        <errorDisplayField>Product_Revenue_Type__c</errorDisplayField>
        <errorMessage>Only Operations users can modify Product Revenue Type for renewal opportunity products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Product_Subregion</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;) &amp;&amp;
ISCHANGED(    Product_Subregion__c    ) &amp;&amp;
NOT( ISNEW() ) &amp;&amp;
ISPICKVAL(Product_Transaction_Type__c, &apos;Renewal&apos;)</errorConditionFormula>
        <errorDisplayField>Product_Subregion__c</errorDisplayField>
        <errorMessage>Only Operations users can modify Product Subregion for renewal opportunity products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Subscription_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;) &amp;&amp;
ISCHANGED(  Subscription_Start_Date__c  ) &amp;&amp;
NOT( ISNEW() ) &amp;&amp;
ISPICKVAL(Product_Transaction_Type__c, &apos;Renewal&apos;)</errorConditionFormula>
        <errorDisplayField>Subscription_Start_Date__c</errorDisplayField>
        <errorMessage>Only Operations users can modify Subscription Start Date for renewal opportunity products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Win_Back</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;) &amp;&amp;
ISCHANGED( Win_Back__c ) &amp;&amp;
NOT( ISNEW() ) &amp;&amp;
ISPICKVAL(Product_Transaction_Type__c, &apos;Renewal&apos;)</errorConditionFormula>
        <errorDisplayField>Win_Back__c</errorDisplayField>
        <errorMessage>Only Operations users can modify Win Back for renewal opportunity products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_Update_Subscription_Start_End_Date</fullName>
        <active>true</active>
        <description>Users (other than  Operations and Sys Admin profile users) cannot update Subscription Start Date and Subscription End Date &amp; term if the Requires Implementation (UAT) is Yes.</description>
        <errorConditionFormula>($Profile.Name != &quot;System Administrator&quot; &amp;&amp; $Profile.Name != &quot;Operations User&quot;)&amp;&amp;(ISPICKVAL(Requires_Implementation_UAT__c, &apos;Yes&apos;)&amp;&amp;(ISPICKVAL(Status__c, &apos;Won&apos;)) &amp;&amp;(!ISBLANK(Subscription_End_Date__c) || !ISBLANK(Subscription_Start_Date__c) || !ISBLANK(Term_Months__c)))</errorConditionFormula>
        <errorMessage>Cannot enter Subscription Start/End dates or Term if Requires Implementation (UAT) value is Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_ACpV_Less_or_Equal_Than_TCpV</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(ACpV__c)) &amp;&amp; NOT(ISBLANK( UnitPrice )) &amp;&amp; ACpV__c &gt; UnitPrice</errorConditionFormula>
        <errorDisplayField>ACpV__c</errorDisplayField>
        <errorMessage>ACpV must be less than or equal to TCpV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_ACpV_TCpV_on_Lost_Product</fullName>
        <active>true</active>
        <description>If Lost, ACpV and TCpV must be 0. Rule is updated based on SPS-1411</description>
        <errorConditionFormula>(ACpV__c != 0 || UnitPrice != 0) &amp;&amp;
ISPICKVAL(Status__c, &apos;Lost&apos;)</errorConditionFormula>
        <errorMessage>ACpV and TCpV must be 0 when product is lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_ACpV_on_Cancelled_or_Lost_Product</fullName>
        <active>true</active>
        <description>If Cancelled, ACpV must be 0. Rule is updated based on SPS-978 (To Exclude Lost from the rule)</description>
        <errorConditionFormula>(ACpV__c != 0 || ISBLANK(ACpV__c) ) &amp;&amp;
ISPICKVAL(Status__c, &apos;Cancelled&apos;)</errorConditionFormula>
        <errorDisplayField>ACpV__c</errorDisplayField>
        <errorMessage>ACpV must be 0 when this product is cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Est_Annual_Fee_for_Trans_Product</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Status__c , &apos;Cancelled&apos;))
&amp;&amp;
((
     ISNEW()
  &amp;&amp; ISPICKVAL( Product_Revenue_Type__c , &apos;ACV/TRANS&apos;)
  &amp;&amp; ISBLANK(Estimated_Annual_Fees__c )
)
||
(
     NOT(ISNEW())
  &amp;&amp; ISPICKVAL( Product_Revenue_Type__c , &apos;ACV/TRANS&apos;) 
  &amp;&amp; ISBLANK(Estimated_Annual_Fees__c )
))</errorConditionFormula>
        <errorDisplayField>Estimated_Annual_Fees__c</errorDisplayField>
        <errorMessage>Estimated Annual Transaction Fees required when Product Revenue Type is ACV/TRANS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Est_Completion_Date</fullName>
        <active>true</active>
        <description>If the Product Revenue Type is PROJ, Est. Completion Date must be populated at Won/Renewed. Error message: &quot;If the Product Revenue Type is PROJ, Est. Completion Date must be populated at Won/Renewed.&quot;</description>
        <errorConditionFormula>AND( ISPICKVAL( Product_Revenue_Type__c , &apos;PROJ&apos;) , ISBLANK(Estimated_Completion_Date__c ) ,
ISPICKVAL(  Status__c  , &apos;Won&apos;) || ISPICKVAL( Status__c  , &apos;Renewed&apos;)  )</errorConditionFormula>
        <errorMessage>If the Product Revenue Type is PROJ, Est. Completion Date must be populated at Won/Renewed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Lost_Amounts_When_Status_Lost</fullName>
        <active>true</active>
        <description>Product Lost Amount (Annual) and Product Lost Amount (Total) must be greater than 0 when opportunity product status is Lost.</description>
        <errorConditionFormula>AND(
IsPickVal(Status__c, &apos;Lost&apos;),(ISBLANK(Product_Lost_Amount_Annual__c) ||  Product_Lost_Amount_Annual__c &lt;= 0 || ISBLANK(Product_Lost_Amount_Total__c) ||
Product_Lost_Amount_Total__c &lt;= 0)
)</errorConditionFormula>
        <errorMessage>Product Lost Amount (Annual) and Product Lost Amount (Total) must be greater than 0 when opportunity product status is Lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Lost_Amounts_When_Status_Not_Lost</fullName>
        <active>true</active>
        <description>Product Lost Amount (Annual) and Product Lost Amount (Total) must be 0 when opportunity product status is not Lost. Added as part of JIRA SPS-1411</description>
        <errorConditionFormula>AND(NOT(IsPickVal(Status__c, &apos;Lost&apos;)),(Product_Lost_Amount_Annual__c != 0 || NOT(ISBLANK(Product_Lost_Amount_Annual__c )) || Product_Lost_Amount_Total__c != 0 || NOT(ISBLANK(Product_Lost_Amount_Total__c ))))</errorConditionFormula>
        <errorMessage>Product Lost Amount (Annual) and Product Lost Amount (Total) must be 0 when opportunity product status is not Lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Pass_Through_Part_1</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT(ISBLANK(Annual_Pass_Through__c )) &amp;&amp; Annual_Pass_Through__c  &gt; 0 ) &amp;&amp;
 NOT(Product2.Pass_Through_Required__c)</errorConditionFormula>
        <errorDisplayField>Annual_Pass_Through__c</errorDisplayField>
        <errorMessage>Pass Through cannot be greater than 0 for this type of product.  Please remove.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Pass_Through_Part_2</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.Pass_Through_Required__c &amp;&amp;
ISBLANK(Annual_Pass_Through__c )</errorConditionFormula>
        <errorDisplayField>Annual_Pass_Through__c</errorDisplayField>
        <errorMessage>Pass Through required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Pass_Through_Part_3</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Annual_Pass_Through__c)) &amp;&amp; Annual_Pass_Through__c  &gt; 0 
&amp;&amp; ISPICKVAL(Product_Transaction_Type__c, &apos;Renewal&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;Cancelled&apos;)</errorConditionFormula>
        <errorDisplayField>Annual_Pass_Through__c</errorDisplayField>
        <errorMessage>Annual Pass Through cannot be greater than 0 for cancelled renewals.  Please remove.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Per_Trans_Fee_for_Trans_Product</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Status__c , &apos;&apos;))
&amp;&amp;
( NOT(ISNEW())
  &amp;&amp; ISPICKVAL( Product_Revenue_Type__c , &apos;ACV/TRANS&apos;) 
  &amp;&amp; ISBLANK(Per_Transaction_Fee__c)
)</errorConditionFormula>
        <errorDisplayField>Per_Transaction_Fee__c</errorDisplayField>
        <errorMessage>Per Transaction Fee required when Product Revenue Type is ACV/TRANS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Product_Subregion</fullName>
        <active>true</active>
        <description>On the Opportunity Product Status of &quot;Won&quot; require sub region if the region is EMEA</description>
        <errorConditionFormula>IF(AND(OR(ISPICKVAL(Status__c, &quot;Won&quot;), ISPICKVAL(Status__c, &quot;Renewed&quot;)), ISPICKVAL(Product_Region__c, &quot;EMEA&quot;),ISBLANK(TEXT(Product_Subregion__c))), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Require Product Subregion when Status is &quot;Won or Renewed&quot;  and Product Region is &quot;EMEA&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Revenue_Type_for_Project_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( Product_Revenue_Type__c , &apos;ACV&apos;) ||
ISPICKVAL( Product_Revenue_Type__c , &apos;ACV/TRANS&apos;) ) &amp;&amp;
ISPICKVAL( Opportunity.Revenue_Type__c , &apos;Project&apos;) &amp;&amp;
$Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>Product_Revenue_Type__c</errorDisplayField>
        <errorMessage>Cannot choose ACV,  ACV/TRANS on a project opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Revenue_Type_for_Subscription_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Product_Revenue_Type__c , &apos;PROJ&apos;)  &amp;&amp;
ISPICKVAL( Opportunity.Revenue_Type__c , &apos;Subscription&apos;) &amp;&amp; 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>Product_Revenue_Type__c</errorDisplayField>
        <errorMessage>Cannot choose PROJ on a subscription opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Status_for_Closed_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;&apos;) ,  Opportunity.IsClosed )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Cannot enter product with blank status on a closed opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Status_for_New_Business_Opp</fullName>
        <active>true</active>
        <description>Ensure that the values of Won/Lost are only used for New Business opportunity.</description>
        <errorConditionFormula>AND( OR( ISPICKVAL(Status__c, &apos;Renewed&apos;)
        ,ISPICKVAL(Status__c, &apos;Cancelled&apos;)
       ),
    Opportunity.RecordType.DeveloperName = &apos;New_Business&apos;
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Cannot choose Renewed or Cancelled on a new business opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Status_for_Renewal_Opp</fullName>
        <active>true</active>
        <description>Ensure that the values of Won/Lost are only used for Renewal opportunity.</description>
        <errorConditionFormula>AND( OR( ISPICKVAL(Status__c, &apos;Won&apos;)
        ,ISPICKVAL(Status__c, &apos;Lost&apos;)
       )
    ,  Opportunity.RecordType.DeveloperName = &apos;Renewal&apos;
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Cannot choose Won or Lost on a renewal opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Subscription_Start_AND_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Subscription_Start_Date__c)) &amp;&amp;
NOT(ISBLANK( Subscription_End_Date__c )) &amp;&amp;
Subscription_Start_Date__c &gt; Subscription_End_Date__c</errorConditionFormula>
        <errorDisplayField>Subscription_Start_Date__c</errorDisplayField>
        <errorMessage>Subscription Start Date must be before Subscription End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_TCpV_When_Cancel_or_Lost</fullName>
        <active>true</active>
        <errorConditionFormula>UnitPrice != 0 &amp;&amp; ISPICKVAL( Status__c , &apos;Cancelled&apos;)</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>TCpV must be 0 when this product is cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Term</fullName>
        <active>true</active>
        <description>Term cannot be greater than 0 for cancelled renewals.</description>
        <errorConditionFormula>NOT(ISBLANK(Term_Months__c)) &amp;&amp; Term_Months__c  &gt; 0 
&amp;&amp; ISPICKVAL(Product_Transaction_Type__c, &apos;Renewal&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;Cancelled&apos;)</errorConditionFormula>
        <errorDisplayField>Term_Months__c</errorDisplayField>
        <errorMessage>Term (months) cannot be greater than 0 for cancelled renewals.  Please remove.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Term_Less_Than_12</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
     OR(
         ISPICKVAL( Status__c , &apos;Won&apos;)
        ,ISPICKVAL( Status__c , &apos;Renewed&apos;) 
       )
    , ISPICKVAL( Product2.Dependent_on_Product_Code__c , &apos;&apos; )
    , Term_Months__c &lt; 12
    ,OR( ISCHANGED(Status__c)
        ,ISCHANGED(Term_Months__c)
       )
    ,AND(
          NOT( $Profile.Name = &apos;Operations User&apos;)
         ,NOT( $Profile.Name = &apos;System Administrator&apos;)
        )
    , NOT( ISPICKVAL(  Product_Revenue_Type__c , &apos;PROJ&apos;))
    , NOT( ISPICKVAL(Product_Transaction_Type__c, &apos;Add On&apos;) )
)</errorConditionFormula>
        <errorDisplayField>Term_Months__c</errorDisplayField>
        <errorMessage>Term must be 12 months or greater for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Type_for_New_Business_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Product_Transaction_Type__c , &apos;Renewal&apos;) &amp;&amp;
 Opportunity.RecordType.DeveloperName = &apos;New_Business&apos;</errorConditionFormula>
        <errorDisplayField>Product_Transaction_Type__c</errorDisplayField>
        <errorMessage>Cannot choose Renewal on a new business opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Type_for_Renewal_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Product_Transaction_Type__c , &apos;New Business&apos;) ||
 ISPICKVAL(Product_Transaction_Type__c, &apos;Upsell&apos;) ||
 ISPICKVAL(Product_Transaction_Type__c, &apos;Add On&apos;)) &amp;&amp;
 Opportunity.RecordType.DeveloperName = &apos;Renewal&apos;</errorConditionFormula>
        <errorDisplayField>Product_Transaction_Type__c</errorDisplayField>
        <errorMessage>Cannot choose New Business, Upsell, or Add On on a renewal opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Est_Completion_Date_Cannot_Be_Past_Date</fullName>
        <active>true</active>
        <description>Estimated Completion Date cannot be in the past</description>
        <errorConditionFormula>AND(NOT($Profile.Name = &quot;System Administrator&quot;), Estimated_Completion_Date__c &lt; TODAY())</errorConditionFormula>
        <errorDisplayField>Estimated_Completion_Date__c</errorDisplayField>
        <errorMessage>Estimated Completion Date cannot be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OptyProrevetype_equal_to_Pro_revtype</fullName>
        <active>true</active>
        <description>Opty.Product Revenue Type should be same as Product.Revenue Type</description>
        <errorConditionFormula>($Profile.Name != &apos;System Administrator&apos;) &amp;&amp; (TEXT(Product__r.Revenue_Type__c) != TEXT(Product_Revenue_Type__c))</errorConditionFormula>
        <errorMessage>Opportunity Product Revenue Type should be same as Revenue Type of Product Setup</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Apply_NYSE_Subsidy</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Opportunity.NYSE_Program_Tier__c, &apos;&apos;))
&amp;&amp; ISPICKVAL(Apply_NYSE_Subsidy__c, &apos;&apos;)
&amp;&amp; NOT(ISNEW())
&amp;&amp; NOT(ISPICKVAL(Product_Transaction_Type__c, &apos;Renewal&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;Cancelled&apos;))</errorConditionFormula>
        <errorDisplayField>Apply_NYSE_Subsidy__c</errorDisplayField>
        <errorMessage>Apply NYSE Subsidy? required when NYSE Program Tier entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Competitor_Incumbent_Loss_Cancel</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Competitor_Incumbent__c  ) &amp;&amp;
 (BEGINS(Text(Lost_Cancelled_Reason__c), &apos;Incumbent&apos;) ||
  BEGINS(Text(Lost_Cancelled_Reason__c), &apos;Competitor&apos;) )</errorConditionFormula>
        <errorDisplayField>Competitor_Incumbent__c</errorDisplayField>
        <errorMessage>Competitor/Incumbent required when Loss/Cancel Reason is for a competitor or incumbent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Competitor_Incumbent_Won</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Won&apos; ) &amp;&amp; ISBLANK( Competitor_Incumbent__c )</errorConditionFormula>
        <errorDisplayField>Competitor_Incumbent__c</errorDisplayField>
        <errorMessage>Competitor/Incumbent required when won</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Completion_Date_or_Subscription_Date</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name != &apos;Operations User&apos; &amp;&amp; 
 $Profile.Name != &apos;System Administrator&apos;) &amp;&amp;
(ISPICKVAL( Status__c , &apos;Won&apos;) ||
 ISPICKVAL( Status__c, &apos;Renewed&apos;)) &amp;&amp;
ISBLANK(Estimated_Completion_Date__c) &amp;&amp;
 ISBLANK( Subscription_Start_Date__c ) &amp;&amp;
  ISBLANK( Subscription_End_Date__c )</errorConditionFormula>
        <errorMessage>Estimated Completion Date required (i.e. Product Revenue Type=PROJ) or Subscription Start and End Date and Term required when won or renewed (i.e. Product Revenue Type contains ACV)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Data_Region</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Data_Region__c ) &amp;&amp;
 PricebookEntry.Product2.Data_Region__c &amp;&amp;
(ISPICKVAL( Status__c , &apos;Won&apos; ) || 
ISPICKVAL( Status__c , &apos;Renewed&apos; ))</errorConditionFormula>
        <errorDisplayField>Data_Region__c</errorDisplayField>
        <errorMessage>Data Region required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Dataset</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Dataset__c ) &amp;&amp;
 PricebookEntry.Product2.Dataset__c &amp;&amp;
(ISPICKVAL( Status__c , &apos;Won&apos; ) || 
ISPICKVAL( Status__c , &apos;Renewed&apos; ))</errorConditionFormula>
        <errorDisplayField>Dataset__c</errorDisplayField>
        <errorMessage>Dataset required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Debt_Issue_Size</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.Debt_Issue_Size__c = TRUE &amp;&amp;  ISBLANK(Debt_Issue_Size__c ) &amp;&amp;
(  ISPICKVAL(Status__c, &apos;Won&apos;) || ISPICKVAL(Status__c, &apos;Renewed&apos;))</errorConditionFormula>
        <errorDisplayField>Debt_Issue_Size__c</errorDisplayField>
        <errorMessage>Debt Issue Size required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Lost_Cancelled_Down_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Cancel_Comment__c) &amp;&amp;
(ISPICKVAL(Status__c, &apos;Lost&apos;)
|| ISPICKVAL(Status__c, &apos;Cancelled&apos;)
|| (Opportunity.RecordType.Name = &apos;Renewal&apos; &amp;&amp; Net_New_Business__c &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>Cancel_Comment__c</errorDisplayField>
        <errorMessage>Lost/Cancelled/Downtick Comment required when lost or cancelled or downtick</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Lost_Cancelled_Reason_Please_Specify</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Status__c, &apos;Lost&apos;) &amp;&amp;  ISBLANK(Cancel_Comment__c)</errorConditionFormula>
        <errorDisplayField>Cancel_Comment__c</errorDisplayField>
        <errorMessage>Lost/Cancelled/Downtick Reason - Please Specify, required when product is Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Lost_Cancelled_Reason_When_Lost</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Lost_Cancelled_Reason__c, &apos;&apos;) &amp;&amp;
(
   ISPICKVAL(Status__c, &apos;Lost&apos;)
|| ISPICKVAL(Status__c, &apos;Cancelled&apos;)
|| (Opportunity.RecordType.Name = &apos;Renewal&apos; &amp;&amp; Net_New_Business__c &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>Lost_Cancelled_Reason__c</errorDisplayField>
        <errorMessage>Lost/Cancelled/Downtick Reason required when lost or cancelled or downtick</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_No_of_Calls</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.No_of_Calls_Dialer__c = TRUE &amp;&amp; ISBLANK( No_of_Calls__c ) &amp;&amp;
(  ISPICKVAL(Status__c, &apos;Won&apos;) || ISPICKVAL(Status__c, &apos;Renewed&apos;))</errorConditionFormula>
        <errorDisplayField>No_of_Calls__c</errorDisplayField>
        <errorMessage>No. of Calls required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_No_of_Certificates</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.No_of_Certificates__c = TRUE &amp;&amp; ISBLANK( No_of_Certificates__c ) &amp;&amp;
(  ISPICKVAL(Status__c, &apos;Won&apos;) || ISPICKVAL(Status__c, &apos;Renewed&apos;))</errorConditionFormula>
        <errorDisplayField>No_of_Certificates__c</errorDisplayField>
        <errorMessage>No. of Certificates required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_No_of_Conferences</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.No_of_Conferences__c = TRUE &amp;&amp; ISBLANK( No_of_Conferences__c ) &amp;&amp;
(  ISPICKVAL(Status__c, &apos;Won&apos;) || ISPICKVAL(Status__c, &apos;Renewed&apos;))</errorConditionFormula>
        <errorDisplayField>No_of_Conferences__c</errorDisplayField>
        <errorMessage>No. of Conferences required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_No_of_Deals</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.No_of_Deals_Transaction_Volumes__c = TRUE &amp;&amp; ISBLANK( No_of_Deals__c ) &amp;&amp;
(  ISPICKVAL(Status__c, &apos;Won&apos;) || ISPICKVAL(Status__c, &apos;Renewed&apos;))</errorConditionFormula>
        <errorDisplayField>No_of_Deals__c</errorDisplayField>
        <errorMessage>No. of Deals required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_No_of_Meetings</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.No_of_Meetings__c = TRUE &amp;&amp; ISBLANK( No_of_Meetings__c ) &amp;&amp;
(  ISPICKVAL(Status__c, &apos;Won&apos;) || ISPICKVAL(Status__c, &apos;Renewed&apos;))</errorConditionFormula>
        <errorDisplayField>No_of_Meetings__c</errorDisplayField>
        <errorMessage>No. of Meetings required for this type of product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_No_of_Questions</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.No_of_Questions__c = TRUE &amp;&amp;  ISBLANK(No_of_Questions__c ) &amp;&amp;
(  ISPICKVAL(Status__c, &apos;Won&apos;) || ISPICKVAL(Status__c, &apos;Renewed&apos;))</errorConditionFormula>
        <errorDisplayField>No_of_Questions__c</errorDisplayField>
        <errorMessage>No. of Questions required for this type of product</errorMessage>
    </validationRules>
</CustomObject>